...
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@color/water"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/report_BTN_back"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                app:backgroundTint="@color/water"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:iconTint="@color/white"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/report_IMG_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_user"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

...
                    android:textStyle="bold"
                    android:gravity="center"
                    android:fontFamily="@font/poppins">
                </com.google.android.material.textview.MaterialTextView>

                <EditText
                    android:id="@+id/report_EditTXT_comment"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/poppins"
                    android:hint="Write what's on your mind">
                </EditText>
...
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/report_BTN_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Submit"
                android:textAllCaps="false"
                app:backgroundTint="@color/sea"
                android:textColor="@color/white"
...
