...
                app:backgroundTint="@color/water"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:iconTint="@color/white"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck"/>

            <RatingBar
                android:id="@+id/show_RB_review"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:numStars="5"
                android:rating="3"
                android:scaleX=".5"
                android:scaleY=".5"
...
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1.2"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_BTN_reports"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="@string/show_go_reports"
                android:textAllCaps="false"
                android:textColor="@color/white"
...
