...
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userReports_RecyclerView_reports"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="0dp"
            android:layout_weight="12">
        </androidx.recyclerview.widget.RecyclerView>

...
